--- a/django_tutorial/blog/templates/blog/base.html
+++ b/django_tutorial/blog/templates/blog/base.html
@@ -1,34 +1,37 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
      <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{%static 'blog/main.css'%}">
+
+    <link rel="stylesheet"  href="{% static 'blog/main.css' %}">
+    
     {% if title %}
         <title>Blog - {{ title }}</title>
     {% else %}
         <title>Blog</title>
     {% endif %}
+
 </head>
 <body>
-    <!-- navagation bar -->
+   
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top nav-color">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{%url 'blog-home'%}">Blog</a>
+          <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Blog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-                <!-- use url command to point to the name of the django url -->
-              <a class="nav-item nav-link" href="{%url 'blog-home'%}">Home</a>
-              <a class="nav-item nav-link" href="{%url 'blog-about'%}">About</a>
+              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -40,7 +43,6 @@
       </nav>
     </header>
 
-    <!-- Main content -->
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
@@ -61,7 +63,6 @@
         </div>
       </div>
     </main>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
