--- a/django_tutorial/blog/templates/blog/base.html
+++ b/django_tutorial/blog/templates/blog/base.html
@@ -22,6 +22,7 @@
 <body>
    
     <header class="site-header">
+      
       <nav class="navbar navbar-expand-md navbar-dark fixed-top nav-color">
         <div class="container">
           <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Blog</a>
@@ -35,8 +36,15 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Login</a>
-              <a class="nav-item nav-link" href="#">Register</a>
+              <!--we can use is_authenticated to chek if a user is loged in and display a diffrent page/links for login logout-->
+              {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <!--when user is logedin we can display profile-->
+                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+              {% endif %}
             </div>
           </div>
         </div>
