--- a/django_tutorial/users/templates/users/profile.html
+++ b/django_tutorial/users/templates/users/profile.html
@@ -2,6 +2,15 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content%}
-    <!--Temporarly displays the username-->
-    <h1>{{ user.username }}</h1>
+    <div class="content-section">
+        <div class="media">
+            <!--img uses django querys to call an image-->
+          <img class="rounded-circle account-img" src="{{ user.profile.profile_image.url }}">
+          <div class="media-body">
+            <h2 class="account-heading">{{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+          </div>
+        </div>
+        <!-- FORM HERE -->
+      </div>
 {% endblock content %}
