--- a/django_tutorial/users/templates/users/profile.html
+++ b/django_tutorial/users/templates/users/profile.html
@@ -12,5 +12,19 @@
           </div>
         </div>
         <!-- FORM HERE -->
+          <!--Add encoder type so we can pass images through our form-->
+          <!--enctype="multipart/form-data" is wat allows us to save the images-->
+          <form method="POST", enctype="multipart/form-data">
+            {% csrf_token %}   
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">{{ user.username }} </legend>
+                <!--we no longer need to use form.as_p becuse we now have crispy forms-->
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
       </div>
 {% endblock content %}
