figured out how to remove old posts and fixed profile.html

--- a/django_tutorial/blog/templates/blog/base.html
+++ b/django_tutorial/blog/templates/blog/base.html
@@ -53,7 +53,7 @@
 
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg">
           {% if messages %}
             {%for message in messages%}
               <!-- Becuse both django and bootsrtap use the same types of tags we 
