--- a/django_tutorial/users/templates/users/profile.html
+++ b/django_tutorial/users/templates/users/profile.html
@@ -2,13 +2,13 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content%}
-    <div class="content-section">
-        <div class="media">
+    <div class="text-wrap">
+        <div class="media text-wrap">
             <!--img uses django querys to call an image-->
           <img class="rounded-circle account-img" src="{{ user.profile.profile_image.url }}">
           <div class="media-body">
-            <h2 class="account-heading">{{ user.username }}</h2>
-            <p class="text-secondary">{{ user.email }}</p>
+            <h1 class="text-wrap">{{ user.username }}</h2>
+            <p class="text-secondary text-wrap">{{ user.email }}</p>
           </div>
         </div>
         <!-- FORM HERE -->
