--- a/django_tutorial/users/templates/users/password_reset_complete.html
+++ b/django_tutorial/users/templates/users/password_reset_complete.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content%}
 <div class="alert alert-info">
-    Your Password has been set
+    Your Password has been Reset
     <a href="{% url 'login' %}">Sign In</a>
 </div>
 {% endblock content %}
