--- a/django_tutorial/users/templates/users/login.html
+++ b/django_tutorial/users/templates/users/login.html
@@ -16,7 +16,11 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need and account <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
+                Need and account <a class="ml-2" href="{% url 'register' %}">Sign Up </a>
+            </small>
+            <br>
+            <small class="text-muted">
+                Forgot Your Password? <a class="ml-2" href="{% url 'password_reset' %}">Reset Password</a>
             </small>
         </div>
     </div>
